hphp/hack/test/typecheck/null/expr_null_has_type_null.php.exp
File "expr_null_has_type_null.php", line 4, characters 18-21:
Unbound name: null (an object type) (Naming[2049])
