hphp/hack/test/typecheck/null/expr_null_has_type_null.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function test(): null {
  return null;
}
